# dir-size-for-explorer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
common/: CMakeLists.txt
common/include/dirsize/: config.h  db.h  guids.h  ipc.h  propertykey.h
common/src/: config.cpp  db.cpp  guids.cpp  ipc.cpp
installer/: Components.wxs  CustomActions.wxs  License.rtf  Product.wxs
service/: CMakeLists.txt  change_journal.cpp  change_journal.h  ipc_server.cpp  ipc_server.h  log_buffer.cpp  log_buffer.h  main.cpp  scanner.cpp  scanner.h  service_control.cpp  service_control.h  throttle.cpp  throttle.h
shell-ext/: CMakeLists.txt  DirSizeShellExt.def  DirSizeTotalSize.propdesc  class_factory.h  context_menu.cpp  context_menu.h  dllmain.cpp  property_handler.cpp  property_handler.h  register.cpp  shell_hook.cpp  shell_hook.h
tests/: CMakeLists.txt  debug_registration.cpp  diag_hook.cpp  manual_insert.cpp  test_db.cpp  test_ipc.cpp  test_scanner.cpp  try_registration.cpp
tray/: CMakeLists.txt  main.cpp  resource.h  resource.rc  settings_dialog.cpp  settings_dialog.h
